updating cp1 internal api
