# cp1/ta/swagger_server/swagger/swagger.yaml
@@ -152,6 +152,12 @@ definitions:
         - "parsing-error"
         - "learning-error"
         - "other-error"
+        - "RAINBOW_READY"
+        - "MISSION_SUCCEEDED"
+        - "MISSION_FAILED"
+        - "ADAPTING"
+        - "ADAPTED"
+        - "ADAPTED_FAILED"
       message:
         type: "string"
         description: "human readable text describing the status, if any"
